# Labels

./: CMakeLists.txt  main.cpp
Headers/: Capitalize.h  Censor.h  CyclingTransformationsDecorator.h  Decorate.h  HelpText.h  LabelDecoratorBase.h  LabelImp.h  LabelPrinter.h  Labels.h  LeftTrim.h  NormalizeSpace.h  ProxyLabel.h  RandomTransformationDecorator.h  Replace.h  RichLabel.h  RichLabelImp.h  RightTrim.h  SimpleLabel.h  TextTransformation.h  TextTransformationDecorator.h
Headers/Decorators/: LabelDecoratorBase.h  RandomTransformationDecorator.h  TextTransformationDecorator.h
Headers/Factory/: DecoratorFactory.h  LabelFactory.h  TransformationFactory.h
Headers/Labels/: HelpText.h  Labels.h  RichLabel.h  SimpleLabel.h
Headers/Printer/: LabelPrinter.h
Headers/Transformations/: Capitalize.h  Censor.h  CompositeTransformation.h  Decorate.h  LeftTrim.h  NormalizeSpace.h  Replace.h  RightTrim.h  TextTransformation.h
src/: Capitalize.cpp  Censor.cpp  CompositeTransformation.cpp  CyclingTransformationsDecorator.cpp  Decorate.cpp  HelpText.cpp  LabelDecoratorBase.cpp  LabelPrinter.cpp  Labels.cpp  LeftTrim.cpp  NormalizeSpace.cpp  ProxyLabel.cpp  RandomTransformationDecorator.cpp  Replace.cpp  RichLabel.cpp  RichLabelImp.cpp  RightTrim.cpp  SimpleLabel.cpp  TextTransformationDecorator.cpp
src/Decorators/: CyclingTransformationsDecorator.cpp  LabelDecoratorBase.cpp  RandomTransformationDecorator.cpp  TextTransformationDecorator.cpp
src/Factory/: DecoratorFactory.cpp  LabelFactory.cpp  TransformationFactory.cpp
src/Labels/: HelpText.cpp  Labels.cpp  ProxyLabel.cpp  RichLabel.cpp  SimpleLabel.cpp
src/Printer/: LabelPrinter.cpp
src/Transformations/: Capitalize.cpp  Censor.cpp  CompositeTransformation.cpp  Decorate.cpp  LeftTrim.cpp  NormalizeSpace.cpp  Replace.cpp  RightTrim.cpp
test/: factory_tests.cpp  tests.cpp
